test/Neg/termina/var_not_def.fin
function test0() {
    foo = foo + 1024 : u16;
    return;
}
